--- a/parallex/style.css
+++ b/parallex/style.css
@@ -3,11 +3,26 @@ body{
 }
 
 #canvas1 {
+    position: relative;
+    width: 800px;
+    height: 700px;
+}
+
+#container {
     position: absolute;
-    border: 3px solid #fff;
     width: 800px;
     height: 700px;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+}
+
+#slider{
+    width: 100%;
+}
+
+p{
+    color: white;
+    font-family: sans-serif;
+    text-align: center;
 }
