--- a/style.css
+++ b/style.css
@@ -14,6 +14,6 @@
     max-height: 100%;
 }
 
-#fire,#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big{
+#colAni,#fire,#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big{
     display: none;
 }
